fix align of ovelapping card

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 html {
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
@@ -15,6 +12,7 @@ html {
           user-select: none; 
 }
 body {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: 'Roboto',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
